feat: add endpoint to retrieve all historical versions of a stock by ticker
